[tool.poetry]
name = "pokeduel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pymongo = "^3.10.1"
dnspython = "^1.16.0"
python-dotenv = "^0.14.0"
async-pokepy = "^0.1.5-alpha.0"
gspread = "^3.6.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
